syntax= "proto3";

package posts;
option java_multiple_files= true;
option java_package= "posts.generated.proto";

message CreatePostRequest {

    string description= 1;
    int32 creator= 2;
}

message CreatePostResponse {
    oneof optional_error {
        string error= 1;
    }
}