syntax= "proto3";

package posts;
option java_multiple_files= true;
option java_package= "posts.generated.proto";

import "create-post.proto";

service Posts {

    rpc CreatePost(CreatePostRequest) returns(CreatePostResponse) { }
}